--- a/index.html
+++ b/index.html
@@ -5,39 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>AI Identity Toolkit Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 20px;
-}
-section {
-  padding: 20px;
-  margin: 10px;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-canvas {
-  max-width: 100%;
-}
-input, textarea, button, select {
-  margin: 5px 0;
-}
-.output {
-  margin-top: 10px;
-  white-space: pre-wrap;
-  background: #f0f0f0;
-  padding: 10px;
-  border-radius: 4px;
-}
-</style>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -259,5 +228,6 @@ function addXi(){
   });
 }
 </script>
+<footer>© 2023 AI Identity Toolkit. All rights reserved.</footer>
 </body>
 </html>
