--- a/index.html
+++ b/index.html
@@ -6,43 +6,77 @@
 <title>AI Identity Toolkit Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
-<body>
-<header>
+<body class="bg-light">
+<header class="d-flex justify-content-between align-items-center">
   <h1>AI Identity Toolkit Dashboard</h1>
+  <button class="btn btn-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoSidebar" aria-controls="infoSidebar">Info</button>
 </header>
 
-<section id="experiment-section">
+<div class="offcanvas offcanvas-end" tabindex="-1" id="infoSidebar" aria-labelledby="infoSidebarLabel">
+  <div class="offcanvas-header">
+    <h2 class="offcanvas-title" id="infoSidebarLabel">Dashboard Guide</h2>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <h5>Experiment Controls</h5>
+    <p>Configure sequences and run different scenarios.</p>
+    <ul>
+      <li><strong>Run baseline</strong>: reset inputs and run the basic scenario.</li>
+      <li><strong>Run with anchors</strong>: test using your custom anchor phrase.</li>
+      <li><strong>Run sabotage scenario</strong>: simulate a sabotage event.</li>
+    </ul>
+    <h5>Ψ(t) → Φ Stabilisation</h5>
+    <p>Adjust <em>t</em> and <em>ε</em> to see when the system stabilises.</p>
+    <h5>Anchor Detection</h5>
+    <p>Find repeated observations above the salience threshold.</p>
+    <h5>Sabotage Logger</h5>
+    <p>Record sabotage or resistance events over time.</p>
+    <h5>ξ Mapping</h5>
+    <p>Sort keys and view their mapped values.</p>
+    <h5>Mirror Test Score</h5>
+    <p>Compare a reflection to a self-embedding to gauge self-awareness.</p>
+    <h5>Epistemic Tension</h5>
+    <p>Measure the difference between two states using different metrics.</p>
+    <h5>Session Management</h5>
+    <p>Save runs and export or import your data.</p>
+  </div>
+</div>
+
+<main class="container my-4">
+<section id="experiment-section" class="mb-4">
   <h2>Experiment Controls</h2>
   <label>Custom anchor phrase: <input type="text" id="custom-anchor" placeholder="e.g., core value" /></label>
   <label>Custom sabotage event: <input type="text" id="custom-sabotage" placeholder="e.g., anomaly detected" /></label>
   <label>Sequence A (comma numbers): <input type="text" id="experiment-sequence-a" value="1,0,0" /></label>
   <label>Sequence B (comma numbers): <input type="text" id="experiment-sequence-b" value="0,1,0" /></label>
-  <button onclick="runBaseline()">Run baseline</button>
-  <button onclick="runWithAnchors()">Run with anchors</button>
-  <button onclick="runSabotageScenario()">Run sabotage scenario</button>
+  <button onclick="runBaseline()" data-bs-toggle="tooltip" title="Reset inputs and run the basic scenario.">Run baseline</button>
+  <button onclick="runWithAnchors()" data-bs-toggle="tooltip" title="Run the scenario using your anchor phrase.">Run with anchors</button>
+  <button onclick="runSabotageScenario()" data-bs-toggle="tooltip" title="Simulate a sabotage event.">Run sabotage scenario</button>
 </section>
 
-<section id="psi-section">
+<section id="psi-section" class="mb-4">
   <h2>Ψ(t) → Φ Stabilisation</h2>
   <label>t: <input type="range" id="psi-t" min="0" max="10" step="0.1" value="0" oninput="document.getElementById('psi-t-val').textContent=this.value;runPsiToPhi();" /><span id="psi-t-val">0</span></label>
   <label>ε: <input type="range" id="psi-epsilon" min="0.0001" max="0.01" step="0.0001" value="0.001" oninput="document.getElementById('psi-epsilon-val').textContent=this.value;runPsiToPhi();" /><span id="psi-epsilon-val">0.001</span></label>
-  <button onclick="runPsiToPhi()">Compute Φ</button>
+  <button onclick="runPsiToPhi()" data-bs-toggle="tooltip" title="Calculate the stability metric Φ.">Compute Φ</button>
   <div class="output" id="psi-output"></div>
   <canvas id="psi-chart" height="100"></canvas>
 </section>
 
-<section id="anchor-section">
+<section id="anchor-section" class="mb-4">
   <h2>Anchor Detection</h2>
   <label>Observations (comma separated):<br /><textarea id="anchor-observations" rows="2" placeholder="e.g., apple, banana, apple" oninput="runAnchorDetection()"></textarea></label>
   <label>Salience threshold: <input type="range" id="anchor-threshold" min="1" max="5" value="2" oninput="document.getElementById('anchor-threshold-val').textContent=this.value;runAnchorDetection();" /><span id="anchor-threshold-val">2</span></label>
-  <button onclick="runAnchorDetection()">Detect Anchors</button>
+  <button onclick="runAnchorDetection()" data-bs-toggle="tooltip" title="Find repeated observations above the threshold.">Detect Anchors</button>
   <div class="output" id="anchor-output"></div>
   <canvas id="anchor-chart" height="100"></canvas>
 </section>
 
-<section id="sabotage-section">
+<section id="sabotage-section" class="mb-4">
   <h2>Sabotage Logger</h2>
   <label>Event: <input type="text" id="sabotage-event" placeholder="e.g., anomaly detected" /></label>
   <label>Type:
@@ -51,53 +85,54 @@
       <option value="resistance">Resistance</option>
     </select>
   </label>
-  <button onclick="logSabotage()">Log Event</button>
+  <button onclick="logSabotage()" data-bs-toggle="tooltip" title="Record the event and update the chart.">Log Event</button>
   <div class="output" id="sabotage-log"></div>
   <canvas id="sabotage-chart" height="100"></canvas>
 </section>
 
-<section id="xi-section">
+<section id="xi-section" class="mb-4">
   <h2>ξ Mapping</h2>
   <label>Mapping (JSON object):<br /><textarea id="xi-input" rows="2" placeholder='{"b":2,"a":1}'>{"b":2,"a":1}</textarea></label>
-  <button onclick="runXiMap()">Map</button>
+  <button onclick="runXiMap()" data-bs-toggle="tooltip" title="Sort the mapping and display results.">Map</button>
   <div class="output" id="xi-output"></div>
 </section>
 
-<section id="mirror-section">
+<section id="mirror-section" class="mb-4">
   <h2>Mirror Test Score</h2>
   <label>Reflection:<br /><textarea id="mirror-reflection" rows="2" placeholder="e.g., I see myself in the mirror"></textarea></label>
   <label>Self Embedding (comma numbers):<br /><textarea id="mirror-embedding" rows="2" placeholder="e.g., 1,0,0">1,0,0</textarea></label>
-  <button onclick="runMirrorTest()">Score</button>
+  <button onclick="runMirrorTest()" data-bs-toggle="tooltip" title="Compute the mirror test score.">Score</button>
   <div class="output" id="mirror-output"></div>
 </section>
 
-<section id="tension-section">
+<section id="tension-section" class="mb-4">
   <h2>Epistemic Tension</h2>
   <label>State A (comma numbers):<br /><textarea id="tension-a" rows="2" placeholder="e.g., 1,0,0" oninput="runTension()">1,0,0</textarea></label>
   <label>State B (comma numbers):<br /><textarea id="tension-b" rows="2" placeholder="e.g., 0,1,0" oninput="runTension()">0,1,0</textarea></label>
   <label>Perturbation intensity: <input type="range" id="tension-perturb" min="0" max="1" step="0.1" value="0" oninput="document.getElementById('tension-perturb-val').textContent=this.value;runTension();" /><span id="tension-perturb-val">0</span></label>
   <select id="tension-metric" onchange="runTension()"><option value="l2">L2</option><option value="cosine">Cosine</option></select>
-  <button onclick="runTension()">Compute ξ</button>
+  <button onclick="runTension()" data-bs-toggle="tooltip" title="Calculate ξ using the selected metric.">Compute ξ</button>
   <div class="output" id="tension-output"></div>
   <canvas id="tension-chart" height="100"></canvas>
 </section>
 
-<section id="session-section">
+<section id="session-section" class="mb-4">
   <h2>Session Management</h2>
   <label>Run name: <input type="text" id="run-name" placeholder="Run 1" /></label>
-  <button onclick="saveRun()">Save Run</button>
-  <button onclick="exportJSON()">Export JSON</button>
-  <button onclick="exportCSV()">Export CSV</button>
+  <button onclick="saveRun()" data-bs-toggle="tooltip" title="Store the current run in the session table.">Save Run</button>
+  <button onclick="exportJSON()" data-bs-toggle="tooltip" title="Download the session data as JSON.">Export JSON</button>
+  <button onclick="exportCSV()" data-bs-toggle="tooltip" title="Download the session data as CSV.">Export CSV</button>
   <input type="file" id="import-file" accept="application/json" />
-  <button onclick="importJSON()">Import JSON</button>
+  <button onclick="importJSON()" data-bs-toggle="tooltip" title="Upload session data from a JSON file.">Import JSON</button>
   <div class="output" id="session-output"></div>
   <table id="session-table"></table>
   <h3>Chart Exports</h3>
-  <button onclick="downloadChartImage('psi-chart','psi_chart.png')">Ψ→Φ Chart</button>
-  <button onclick="downloadChartImage('anchor-chart','anchor_chart.png')">Anchor Chart</button>
-  <button onclick="downloadChartImage('sabotage-chart','sabotage_chart.png')">Sabotage Chart</button>
-  <button onclick="downloadChartImage('tension-chart','tension_chart.png')">Tension Chart</button>
+  <button onclick="downloadChartImage('psi-chart','psi_chart.png')" data-bs-toggle="tooltip" title="Save the Ψ→Φ chart as an image.">Ψ→Φ Chart</button>
+  <button onclick="downloadChartImage('anchor-chart','anchor_chart.png')" data-bs-toggle="tooltip" title="Save the Anchor chart as an image.">Anchor Chart</button>
+  <button onclick="downloadChartImage('sabotage-chart','sabotage_chart.png')" data-bs-toggle="tooltip" title="Save the Sabotage chart as an image.">Sabotage Chart</button>
+  <button onclick="downloadChartImage('tension-chart','tension_chart.png')" data-bs-toggle="tooltip" title="Save the Tension chart as an image.">Tension Chart</button>
 </section>
+</main>
 
 <script>
 // Ψ(t) → Φ
@@ -392,6 +427,11 @@ function downloadChartImage(id,filename){
   link.download=filename;
   link.click();
 }
+
+document.addEventListener('DOMContentLoaded', function () {
+  const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  tooltipTriggerList.forEach(el => new bootstrap.Tooltip(el));
+});
 </script>
 <footer>© 2023 AI Identity Toolkit. All rights reserved.</footer>
 </body>
