--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>AI Identity Toolkit Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
@@ -64,7 +65,7 @@
   <label>ε: <input type="range" id="psi-epsilon" min="0.0001" max="0.01" step="0.0001" value="0.001" oninput="document.getElementById('psi-epsilon-val').textContent=this.value;runPsiToPhi();" /><span id="psi-epsilon-val">0.001</span></label>
   <button onclick="runPsiToPhi()" data-bs-toggle="tooltip" title="Calculate the stability metric Φ.">Compute Φ</button>
   <div class="output" id="psi-output"></div>
-  <canvas id="psi-chart" height="100"></canvas>
+  <div id="psi-chart" style="height:300px;"></div>
 </section>
 
 <section id="anchor-section" class="mb-4">
@@ -148,7 +149,7 @@ function runPsiToPhi(){
   const eps = parseFloat(epsField.value);
   if(isNaN(t) || isNaN(eps)){
     document.getElementById('psi-output').textContent = 'Please enter valid numbers for t and ε.';
-    if(window.psiChart){window.psiChart.destroy();window.psiChart=null;}
+    if(window.psiChart){Plotly.purge('psi-chart');window.psiChart=null;}
     return;
   }
   const phi = psiToPhi(t, eps);
@@ -160,12 +161,11 @@ function runPsiToPhi(){
     labels.push(x.toFixed(1));
     data.push(psiToPhi(x, eps));
   }
-  if(window.psiChart) window.psiChart.destroy();
-  window.psiChart = new Chart(document.getElementById('psi-chart'),{
-    type:'line',
-    data:{labels:labels,datasets:[{label:'Φ(t)',data:data,borderColor:'blue',fill:false}]},
-    options:{responsive:true,scales:{y:{beginAtZero:true}}}
-  });
+  if(window.psiChart) Plotly.purge('psi-chart');
+  const trace = {x:labels, y:data, mode:'lines', type:'scatter', name:'Φ(t)', line:{color:'blue'}};
+  const layout = {margin:{t:20}, xaxis:{title:'t'}, yaxis:{title:'Φ', rangemode:'tozero'}};
+  Plotly.newPlot('psi-chart',[trace],layout,{responsive:true});
+  window.psiChart = true;
 }
 
 // Anchor detection
@@ -421,11 +421,19 @@ function importJSON(){
 }
 
 function downloadChartImage(id,filename){
-  const canvas=document.getElementById(id);
+  const el=document.getElementById(id);
   const link=document.createElement('a');
-  link.href=canvas.toDataURL('image/png');
-  link.download=filename;
-  link.click();
+  if(el && typeof el.toDataURL==='function'){
+    link.href=el.toDataURL('image/png');
+    link.download=filename;
+    link.click();
+  }else if(window.Plotly && el){
+    Plotly.toImage(el,{format:'png'}).then(url=>{
+      link.href=url;
+      link.download=filename;
+      link.click();
+    });
+  }
 }
 
 document.addEventListener('DOMContentLoaded', function () {
